Spacings fix

--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -145,14 +145,7 @@ h6 {
   line-height: 1;
 }
 
-#get-started {
-  margin-bottom: 5px;
-}
 
-#hosting, #git-system {
-  margin-bottom: 20px;
-  margin-top: 80px;
-}
 
 .card-grid {
   margin-bottom: 80px;
